--- a/Styles/global_style.css
+++ b/Styles/global_style.css
@@ -1,10 +1,68 @@
 /* Pimary colours */
-/* Fonts */
+/* Fonts & Texts */
+/* Fonts & Texts - Mobile */
 /* Texts */
 h1 {
   color: black;
   font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
   font-size: 2.25em;
-  font-weight: 700;
+}
+
+h2 {
+  color: black;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: 1.75em;
+}
+
+h3 {
+  color: black;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: 1.75em;
+}
+
+h4 {
+  color: black;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: 1.5em;
+}
+
+h5 {
+  color: black;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: 1.25em;
+}
+
+h6 {
+  color: black;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: 1em;
+}
+
+ul {
+  color: black;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: 1em;
+}
+
+p {
+  color: black;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: normal;
+  font-size: 1em;
+}
+
+a {
+  color: black;
+  background-color: none;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: 1em;
 }
 /*# sourceMappingURL=global_style.css.map */
